css/Styyyle.css
/************************************
HEADER
*************************************/
#header h1 {
	font-size: 50px;
	padding: 20px 0 20px 0;
}

h1 {
	font-family: 'Changa One', sans-serif;
	margin: 15px 0;
	font-size: 1.75em;
	font-weight: normal;
	line-height: 0.8em;
	color: #ffffff;
}

#header{
	text-decoration: none; 
	letter-spacing: 3px;
	margin: 0 0 0 0;
	padding: 5px 0 0 0;
	width: 100%;	
  	border: 0;
  	text-align: center;
	background-size: contain;
	background-color: #1a1a1a;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#141414+0,333333+100 */
	background: #141414; /* Old browsers */
	background: -moz-linear-gradient(top,  #141414 0%, #333333 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  #141414 0%,#333333 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  #141414 0%,#333333 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#141414', endColorstr='#333333',GradientType=0 ); /* IE6-9 */
}

#top_bar{
	margin:0;
  	padding: 2px 0 0 0;
  	background-color: #cc0000;
  	border-top: 2px solid #ff0000;
  	border-bottom: 2px solid #990000;
}

#VideoTitle{
	font-size: 2.5vw;
	color: #ffffff;
}

#currVideo{
	box-shadow: 10px 10px 25px 5px #000000;
}

* a {
	text-decoration: none;
	color: #cc0000;
}

a:visited {
	color: #cc0000;
}

body {
	height: 100%;
	font-family: 'Open Sans', sans-serif;
	background-color: #1a1a1a;
}

html,
body {
   margin:0;
   padding:0;
   height:100%;
}
section {
	background-image: url(MoonShot.jpg);
	margin:0;
	border:0;
	height: 100%;
}

#change {
	padding: 0 0 12px 0;	
	border: none;
	outline: none;
}

#GBLink {
	padding: 0 18px 12px 0;	
	border: none;
	outline: none;
}

#resumePause {
	padding: 0 0 0 0;
	border: none;
	outline:none;
	
}

#videoDiv{
    float: left;
	width: 58%;
	text-align: center;
}

#chatDiv{
	width: 40%;
	float: right;
}

.videoWrapper {
	position: relative;
	padding-bottom: 55%; /* 16:9 */
	padding-top: 25px;
	height: 0;
	margin-left: 3%;
}
.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.chatWrapper {
	position: relative;
	padding-bottom: 100%; /* 16:9 */
	padding-top: 25px;
	height: 0;
}
.chatWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	box-shadow: 10px 10px 25px 5px #000000;
}

#footNote {
	text-align: center;
}

#timeSinceStart {
	font-size: .9vw;
}

#NOTE, #timeSinceStart {
	color: #ffffff;
}

